Oppdatert tester og service